--- a/fMailer.Web/Views/Shared/_Layout.cshtml
+++ b/fMailer.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Linq
+@using fMailer.Web.Core.NonDomainModels
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -50,66 +51,28 @@
                 padding-right: 20px;
             }
         }
+        .container
+        {
+            margin: 10px 100px 0px 100px;
+        }
     </style>
 </head>
 <body>
     @Html.Partial("ErrorModalPartial")
     <div id="wrap">
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container-fluid">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </a>
-                    <a class="brand" href="">fMailer</a>
-                    <div class="nav-collapse collapse">
-                        <p class="navbar-text pull-right">
-                            Logged in as <a href="#" class="navbar-link">Username</a> | <a href="">Sign Out</a>
-                        </p>
-                        <ul class="nav">
-                            <li class="active"><a href="#">Hub</a></li>
-                            <li><a href="#about">Help</a></li>
-                            <li><a href="#contact">Settings</a></li>
-                        </ul>
-                    </div>
-                    <!--/.nav-collapse -->
-                </div>
-            </div>
-        </nav>
+        @Html.Partial("NavigationPartial", new NavigationModel { SelectedRouteName = ViewBag.CurrentRoute, Request = Request })
         <div style="height: 60px;"><!-- Layout helper --></div>
-        <div class="container-fluid">
-            <div class="row-fluid">
-                <div class="span3">
-                    <div class="well sidebar-nav">
-                        <ul class="nav nav-list">
-                            <li class="nav-header">Sidebar</li>
-                            <li class="active"><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                            <li class="nav-header">Sidebar</li>
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                            <li><a href="#">Link</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <!--/span-->
-                <div class="span9">
-                    @RenderBody()                    
-                </div>
-                <!--/span-->
-            </div>
-            <!--/row-->
+
+        <div class="container">
+            @RenderBody()
         </div>
+
         <div id="push">
         </div>
     </div>
     <footer id="footer">
         <p style="float: right" class="muted credit">
-            Copyright © 2012 feafarot | version: @typeof(fMailer.Web.RouteNmaes).Assembly.GetName().Version.ToString() &nbsp;
+            Copyright © 2012 <a href="https://github.com/feafarot">feafarot</a> | version: @typeof(fMailer.Web.RouteNames).Assembly.GetName().Version.ToString() &nbsp;
         </p>
     </footer>
 
@@ -119,12 +82,11 @@
     <script src="@Url.Content("~/Scripts/timers-manager.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/helpers.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/services-manager.js")" type="text/javascript"></script>
-    
     @if (!string.IsNullOrEmpty(ViewBag.ViewModelPath))
-    {        
-    <script src="@Url.Content(ViewBag.ViewModelPath)" type="text/javascript"></script>
+    {
+    <script src="@Url.Content(ViewBag.ViewModelPath)ViewModel.js" type="text/javascript"></script>
     <script type="text/javascript">
-        ko.applyBindings(new @ViewBag.ViewModelPath.Split('/').Last()ViewModel());
+        ko.applyBindings(new @System.Linq.Enumerable.Last(ViewBag.ViewModelPath.Split('/'))ViewModel());
     </script>
     }
     @RenderSection("scripts", required: false)
