Some fixes and refactoring
Signed-off-by: feafarot <sly.feafarot@gmail.com>

--- a/fMailer.Web/Views/Shared/ErrorModalPartial.cshtml
+++ b/fMailer.Web/Views/Shared/ErrorModalPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="errorModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
+﻿<div id="errorModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true" style="z-index: 60000">
     <div class="modal-header">
         <h3 id="errorModalLabel">! Error</h3>
     </div>
