--- a/fMailer.Web/Views/Main/Templates.cshtml
+++ b/fMailer.Web/Views/Main/Templates.cshtml
@@ -24,28 +24,25 @@
     <h1 class="large"><img alt="Templates" src="@Url.Content("~/Content/Images/Mail write.png")" /> \ Templates</h1>
 </div>
 <div class="row-fluid">
-    <div class="span1">
-        <a href="#" rel="tooltip" title="Add new Template" data-bind="click: openCreateTemplateModal">
-            <img alt="Add template" src="@Url.Content("~/Content/Images/Add(C).png")" />
-        </a>
-    </div>
-    <div class="span11">
-        <table class="table table-hover">
-            <tbody data-bind="foreach: templates">
-                <tr>
-                    <td>
-                        <div class="row-fluid">
-                            <div class="span1">
-                                <img alt="Add template" src="@Url.Content("~/Content/Images/Mail Write(d).png")" style="margin-top: 30px;" />
-                            </div>
-                            <div class="span11">
-                                <h3><a href="#" data-bind="text: Name"></a></h3>
-                                <div data-bind="text: Description"></div>
-                            </div>
+    <button class="btn btn-primary" title="Create new Template" data-bind="click: openCreateTemplateModal">
+        @*<img alt="Add template" src="@Url.Content("~/Content/Images/Add(C).png")" />*@
+        Create new Template
+    </button>
+    <table class="table table-hover">
+        <tbody data-bind="foreach: templates">
+            <tr>
+                <td>
+                    <div class="row-fluid">
+                        <div class="span1">
+                            <img alt="Add template" src="@Url.Content("~/Content/Images/Mail Write(d).png")" style="margin-top: 30px;" />
                         </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+                        <div class="span11">
+                            <h3><a href="#" data-bind="text: Name, click: editTemplate"></a></h3>
+                            <div data-bind="text: Description"></div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>    
 </div>
