Implemented basic CRUID for Templates.

--- a/fMailer.Web/Views/Main/Distributions.cshtml
+++ b/fMailer.Web/Views/Main/Distributions.cshtml
@@ -6,5 +6,5 @@
 }
 
 <div class="page-header">
-     <h1 class="large"><img alt="Distributions" src="@Url.Content("~/Content/Images/Mail Out.png")" /> \ Distributions</h1>
+     <h1 class="large"><img alt="Distributions" src="@Url.Content("~/Content/Images/Mail Out.png")" /> Distributions</h1>
 </div>
