--- a/fMailer.Web/Views/Shared/NavigationPartial.cshtml
+++ b/fMailer.Web/Views/Shared/NavigationPartial.cshtml
@@ -11,7 +11,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href=""><span style="color: #0088CC">if</span>Mailer</a>
+            <a class="brand" href="#"><span style="color: #0088CC">f</span>Mailer</a>
             <nav class="nav-collapse collapse">
                 <ul class="nav">
                     @foreach(var nitem in Model.NavigationItems)
