--- a/fMailer.Web/Views/Main/Templates.cshtml
+++ b/fMailer.Web/Views/Main/Templates.cshtml
@@ -60,7 +60,7 @@
                         <blockquote>
                             <p>
                                 <h3><a href="#" data-bind="text: Name, click: editTemplate"></a></h3>
-                                <button class="close" style="float: right;" title="Delete template" data-bind="click: deleteTemplate">x</button>
+                                <button class="close pull-right" title="Delete template" data-bind="click: deleteTemplate">x</button>
                             </p>
                             <small data-bind="text: Description"></small>
                         </blockquote>
