--- a/fMailer.Web/Views/Shared/_Layout.cshtml
+++ b/fMailer.Web/Views/Shared/_Layout.cshtml
@@ -78,6 +78,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/knockout")
+    <script src="@Url.Content("~/Scripts/linq.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Content/Bootstrap/js/bootstrap.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/timers-manager.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/helpers.js")" type="text/javascript"></script>
