Implemented Utility that fully recreated database.

--- a/fMailer.Web/Views/Main/Contacts.cshtml
+++ b/fMailer.Web/Views/Main/Contacts.cshtml
@@ -49,7 +49,7 @@
             <tr>
                 <td>
                     <div class="row-fluid">
-                        <div class="span1">
+                        <div class="span1 hidden-phone">
                             <img alt="Add template" src="@Url.Content("~/Content/Images/User-Message(d).png")" style="margin-top: 30px; width: 24px;" />
                         </div>
                         <div class="span11">
