Update layout. Centered main container and navigation.

--- a/fMailer.Web/Views/Shared/_Layout.cshtml
+++ b/fMailer.Web/Views/Shared/_Layout.cshtml
@@ -51,10 +51,19 @@
                 padding-right: 20px;
             }
         }
-        .container
+        
+        /*.container
         {
-            margin: 10px 100px 0px 100px;
-        }
+            margin: 30px 123px 0px 100px;
+        }*/
+
+        /*@@media (max-width: 1024px) {
+            .container
+            {
+                margin: 0px 5px 0px 100px;
+            }
+        }*/
+
     </style>
 </head>
 <body>
