Added icons. Added favicon and folder icon. Changed settings icon. Add metrostudio project file.

--- a/fMailer.Web/Views/Shared/_Layout.cshtml
+++ b/fMailer.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <meta name="description" content="Email Auto-Cast Service">
     <meta name="author" content="feafarot">
 
+    <link rel="shortcut icon" href="favicon.png" />
     <link href="@Url.Content("~/Content/Common.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap.min.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/Bootstrap/Css/bootstrap-responsive.min.css")" rel="stylesheet">
