--- a/fMailer.Web/Views/Main/Settings.cshtml
+++ b/fMailer.Web/Views/Main/Settings.cshtml
@@ -123,6 +123,6 @@
     </fieldset>
 
     <p>
-        <input class="btn btn-info" type="submit" value="Save" />
+        <input class="btn btn-info pull-right" style="margin-bottom: 10px;" type="submit" value="Save" />
     </p>
 }
