--- a/fMailer.Web/Views/Shared/ErrorModalPartial.cshtml
+++ b/fMailer.Web/Views/Shared/ErrorModalPartial.cshtml
@@ -12,7 +12,7 @@
             Error Details
         </a> 
         <div id="errorDetailsExpander" class="collapse"> 
-            <span id="errorDetails"> Some error details, like NRE or smb... </span>
+            <span id="errorDetails"> Server side runtime exception occured. </span>
         </div>
     </div>
     <div class="modal-footer">
